[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/enemies/enemy_base/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/enemies/level 2/shadow_creature/ShadowCreature.gd" type="Script" id=2]
[ext_resource path="res://assets/level2 - dungeon/enemies/shadow creature/shadow_creature_04.png" type="Texture" id=3]
[ext_resource path="res://assets/level2 - dungeon/enemies/shadow creature/shadow_creature_06.png" type="Texture" id=4]
[ext_resource path="res://assets/level2 - dungeon/enemies/shadow creature/shadow_creature_05.png" type="Texture" id=5]
[ext_resource path="res://assets/level2 - dungeon/enemies/shadow creature/shadow_creature_07.png" type="Texture" id=6]
[ext_resource path="res://assets/level2 - dungeon/enemies/shadow creature/shadow_creature_11.png" type="Texture" id=7]
[ext_resource path="res://assets/level2 - dungeon/enemies/shadow creature/shadow_creature_02.png" type="Texture" id=8]
[ext_resource path="res://assets/level2 - dungeon/enemies/shadow creature/shadow_creature_00.png" type="Texture" id=9]
[ext_resource path="res://assets/level2 - dungeon/enemies/shadow creature/shadow_creature_03.png" type="Texture" id=10]
[ext_resource path="res://assets/level2 - dungeon/enemies/shadow creature/shadow_creature_01.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "attack", "default" ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 41.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 41.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 171.073

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16.5, 5 )

[node name="ShadowCreature" instance=ExtResource( 1 )]
script = ExtResource( 2 )
default_facing = 1
health = 80
speed = 110.0
damage = 10
gravity = 400

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 6 )

[node name="AnimationPlayer" parent="." index="1"]
anims/attack = SubResource( 5 )

[node name="Body" parent="." index="2"]
position = Vector2( -3, 6.5 )
shape = SubResource( 1 )

[node name="GroundDetect" type="RayCast2D" parent="." index="3"]
position = Vector2( 16, 45 )
enabled = true

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -3, 6.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D" parent="DetectionRange" index="0"]
shape = SubResource( 3 )

[node name="Attack" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack" index="0"]
position = Vector2( 32, 10 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_Attack_body_exited"]
